# video-explainer-system

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml
deep-dive/: ARCHITECTURE.md  BRAIN-RECIPE.md  BUILD-PLAN.md  ENGINE-MAP.md  PRD.md
deep-dive/audio/: README.md  audio_recipes.py
docs/: visual-devices.md
phase0/: README.md  align.py  memprobe.py  mux.py  render.py  run.py  script.json  synth.py
phase0/deck/: index.html
skills/deepdive/: SKILL.md
skills/explainer/: SKILL.md
src/explainer/: __init__.py  brand.py  cli.py  deckbuild.py  handoff.py  ingest.py  lexicon.py  manifest.py  presets.py  project.py  qa.py  recorder.py  stills.py  talktime.py  themes.py  validate.py  wiki.py
src/explainer/assets/: deck.css  deck_base.html  deck_engine.js  recorder.html
src/explainer/assets/fonts/: README.md
src/explainer/deepdive/: __init__.py  actbed.py  assemble.py  audio.py  buildlog.py  captions.py  chapters.py  cli.py  conform.py  doctor.py  gate.py  interstitials.py  manifest.py  orchestrator.py  packaging.py  program.py  rubric.py  segstatus.py
src/explainer/media/: __init__.py  align.py  common.py  mux.py  render.py  synth.py  voiceover.py
